--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --watch --silent --noStackTrace",
     "test:staged": "jest --passWithNoTests --findRelatedTests ./src --silent  --noStackTrace",
+    "test:ci": "jest --coverage",
     "prepare": "husky install"
   },
   "repository": {
