--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch --silent --noStackTrace",
-    "test:staged": "jest --passWithNoTests --findRelatedTests ./src --silent  --noStackTrace",
-    "test:ci": "jest --coverage=true --silent --noStackTrace",
+    "test": "jest --silent --noStackTrace --passWithNoTests",
+    "test:unit": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests ./src",
+    "test:ci": "npm test -- --coverage=true",
     "prepare": "husky install"
   },
   "repository": {
