--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "husky": "^8.0.0",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
