--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --silent --noStackTrace --passWithNoTests",
-    "test:unit": "npm test -- --watch -c jest-unit.config.js",
+    "test:unit": "npm test -- --watch --coverage=false -c jest-unit.config.js",
     "test:inegration": "npm test -- --watch -c jest-integration.config.js",
     "test:staged": "npm test -- --findRelatedTests /src",
     "test:ci": "npm test -- --coverage=true",
